Added twitterApi and working on redditApiWrapper
Added twitter api functionality with authorization.
Currently working on redditApiWrapper using authorization, authorization
not working as intended.

Reddit authorization now passed, currently working on submitting media
as tweet using Base-64 String of image URL.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,10 @@
   },
   "homepage": "https://github.com/theseanathan/twitter_project#readme",
   "dependencies": {
+    "express": "^4.15.4",
+    "fs": "0.0.1-security",
+    "http": "0.0.0",
+    "instagram-node": "^0.5.8",
     "reddit-oauth": "^1.1.1",
     "request": "^2.81.0",
     "snoowrap": "^1.14.1",
